# styxpress

./: .gitignore  README.md  pyproject.toml
styxpress/: __init__.py  __main__.py  _bundle.py  _embedder_engine.py  _kpsewhich.py  _resolve_engine.py
styxpress/embed/: __init__.py  _bundle.py  _embedder_engine.py  _resolve_engine.py  pdf.py  pdflogo.py  sty.py
testbed/: testmerger.tex
testbed/allmerged.styxpress/: info.yml  mutool-convert-pdf-pdf-ascii.txt  mutool-convert-to-svg.txt  mytesta.sty  testb.sty
