[tool.poetry]
name = "styxpress"
version = "0.1"
description = "Embed LaTeX packages and files into a single sty bundle"
authors = ["Philippe Faist <philippe.faist@bluewin.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
