[tool.poetry]
name = "styxpress"
version = "0.1"
description = "Embed LaTeX packages and files into a single sty bundle"
authors = ["Philippe Faist <philippe.faist@bluewin.ch>"]
license = "MIT"

[tool.poetry.scripts]
poetry = 'styxpress.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
